--- a/mnmcookies.html
+++ b/mnmcookies.html
@@ -159,11 +159,11 @@
                 </li>
                 <li>
                   <span>6</span>
-                  Using a medium or large cookie scoop, scoop and place dough scoops on baking sheet, 1 inch for medium cookies and 2 inches for large.
+                  Using a medium or large cookie scoop, scoop and place dough scoops on baking sheet, 1 inch for medium cookies and 2 inches for large cookies.
                 </li>
                 <li>
                   <span>7</span>
-                  Bake for 10-12 minutes for medium and 12-14 for large.
+                  Bake for 10-12 minutes for medium cookies and 12-14 for large cookies.
                 </li>
                 <li>
                   <span>8</span>
