--- a/mnmcookies.html
+++ b/mnmcookies.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/4 cups Mini M&M's (substitute with chopped Unreal milk chocolate gems)</label>
+                  <label class="form-check-label" for="unsalted">1 1/4 cups Mini M&M's (substitute chopped Unreal milk chocolate gems)</label>
                 </div>
               </div>
             </div>
