--- a/mnmcookies.html
+++ b/mnmcookies.html
@@ -167,7 +167,7 @@
                 </li>
                 <li>
                   <span>8</span>
-                  Let cool on cookie sheet for 10 minutes before transferring to cooling rack.
+                  Let cookies cool on cookie sheet for 10 minutes before transferring to cooling rack.
                 </li>
               </ul>
             </div>
