--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" alt="Emuhly">
+          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
           <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
@@ -155,7 +155,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Boston Cream Cupcakes">
+              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Biscuits">
             </a>
             <figcaption class="mt-2">
               <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
@@ -165,7 +165,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creampuffs.jpg" class="w-100" alt="Cinnamon Rolls">
+              <img src="assets/images/food/creampuffs.jpg" class="w-100" alt="Cream ">
             </a>
             <figcaption class="mt-2">
               <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
@@ -226,7 +226,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="/">
-              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" >
             </a>
           </div>
         </div>
