--- a/pancakes.html
+++ b/pancakes.html
@@ -13,7 +13,7 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" alt="Emuhly">
+          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
           <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
@@ -167,7 +167,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="/">
-              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" >
             </a>
           </div>
         </div>
