--- a/tofu.html
+++ b/tofu.html
@@ -13,10 +13,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" alt="Emuhly">
+          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -151,7 +151,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="/">
-              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" >
             </a>
           </div>
         </div>
