--- a/fusilliallavodka.html
+++ b/fusilliallavodka.html
@@ -87,11 +87,11 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1/4 cup olive oil (not extra virgin)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1/2 shallot, finely chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
