--- a/hazelnuttruffles.html
+++ b/hazelnuttruffles.html
@@ -87,7 +87,7 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">175g hazelnut wafers (I use the brand <a href="https://www.loackerusa.com/classic-hazelnut%2C-creme-filled-wafer-cookies%2C-6.17oz/5637144602.p?back=true" style="color: #FF6330">Loacker</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
