--- a/monkeybread.html
+++ b/monkeybread.html
@@ -92,7 +92,7 @@
               <div class="checklist pb-2">
                 <strong>Monkey Bread</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">2 cups flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
