--- a/sourcherrystrudel.html
+++ b/sourcherrystrudel.html
@@ -87,11 +87,11 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">16oz frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">16oz frozen sour cherries* (I use the brand <a href="https://www.wholefoodsmarket.com/product/omena-organics-organic-tart-montmorency-cherries-b07fyj3rct" style="color: #FF6330">Omena Organics</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
