--- a/tofu.html
+++ b/tofu.html
@@ -87,7 +87,7 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 block (12-15oz) organic extra-firm tofu</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
@@ -99,7 +99,7 @@
                   <label class="form-check-label" for="unsalted">1 tbsp tamari</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 tbsp cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
