--- a/baklava.html
+++ b/baklava.html
@@ -88,11 +88,11 @@
               <div class="checklist pb-2">
                 <strong>Baklava</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">16oz (16 sheets) frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 1/2 pounds raw walnuts, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
@@ -115,19 +115,19 @@
               <div class="checklist pb-4">
                 <strong>Syrup</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">2 cups granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 cup honey</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">2 cups water</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 lemon peel (optional)</label>
                 </div>
               </div>
