--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -88,7 +88,7 @@
               <div class="checklist pb-2">
                 <strong>Custard</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1/2 cup (118ml) milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
