--- a/butterbars.html
+++ b/butterbars.html
@@ -88,7 +88,7 @@
               <div class="checklist pb-2">
                 <strong>Crust</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 box vanilla or yellow cake mix (I use the brands <a href="https://www.wholefoodsmarket.com/product/european-bakery-vanilla-organic-cake-mix-1525-oz-b000vk2cly" style="color: #FF6330">European Gourmet Bakery</a>, <a href="https://www.wholefoodsmarket.com/product/annies-homegrown-organic-classic-yellow-cake-mix-21-oz-b07bb1wlj8" style="color: #FF6330">Annie's</a>, <a href="https://www.wholefoodsmarket.com/product/arrowhead-mills-organic-vanilla-cake-mix-b00zkupl6i" style="color: #FF6330">Arrowhead Mills</a>, and <a href="https://shop.wholesomesweet.com/products/organic-scratch-quality-golden-cake-baking-mix?variant=41210924630179" style="color: #FF6330">Wholesome</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
@@ -103,7 +103,7 @@
               <div class="checklist pb-4">
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 package (8oz) cream cheese, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
