--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -88,7 +88,7 @@
               <div class="checklist pb-2">
                 <strong>Cookie Cake</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">3/4 cup (170g) unsalted butter, softened to room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
