--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -87,7 +87,7 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 cup unsalted butter, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
@@ -99,7 +99,7 @@
                   <label class="form-check-label" for="unsalted">1/4 cup granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="crackers">1 (3.4oz) package vanilla instant pudding mix</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
